--- a/output.css
+++ b/output.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=News+Cycle");
+* {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+}
+
 .header {
   height: 30px;
   background-color: gray;
